# billstream

./: README.md
.zed/: settings.json
api/: .env  README.md  pyproject.toml
api/api/: _types.py  example.py  payment.py  server.py
api/api/alpaca_service/: __init__.py
api/api/calendar_service/: __init__.py
api/api/compli_service/: __init__.py
api/api/cred_service/: __init__.py
api/api/example_service/: __init__.py
api/api/greeting_service/: __init__.py
api/api/linkedin_service/: __init__.py
api/api/nytimes_service/: __init__.py
api/api/weather_service/: __init__.py
api/api/wikipedia_service/: __init__.py
js/: components.d.ts  index.html  package-lock.json  package.json
js/src/components/: Explore.vue  HelloWorld.vue  Hero.vue
js/src/pages/: index.vue
sdk/: .env  example.py  pyproject.toml  test.py
sdk/sdk/: __init__.py  agenttk.py  spinner.py
sdk/sdk/payments/: bridge.py  privy.py  privy_wallet.py  solana.py
sdk/sdk/wallets/: __init__.py
