[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Kevin Zhang <me@kevz.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.4"}
requests = "^2.32.3"
jsonref = "^1.1.0"
openai = "^1.53.0"
wikipedia = "^1.4.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
